--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  color: antiquewhite;
+}
+
+body{
+  background-color: #1f1147;
+}
+
+.flexer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
